--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -8,6 +8,21 @@
 	  <th>introduction</th>
 	  <th><%= user.introduction %></th>
   </tr>
+  <tr>
+    <th>フォロー数：</th><th><%= user.followings.count %></th>
+  </tr>
+  <tr>
+    <th>フォロワー数：</th><th><%= user.followers.count %></th>
+  </tr>
+  <tr>
+    <td>
+      <% if current_user.following?(user) %>
+        <%= link_to "フォローを外す",  user_relationships_path(user), method: :delete %>
+      <% else %>
+        <%= link_to "フォローする",  user_relationships_path(user), method: :post %>
+      <% end %>
+    </td>
+  </tr>
 </table>
 
 <div class='row'>
