--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -17,19 +17,19 @@
   <tr>
     <td>
       <% if current_user.following?(user) %>
-        <%= link_to "フォローを外す",  user_relationships_path(user), method: :delete %>
+        <%= link_to "フォローを外す",  user_relationships_path(user), method: :delete, class: "btn btn-danger" %>
       <% else %>
-        <%= link_to "フォローする",  user_relationships_path(user), method: :post %>
+        <%= link_to "フォローする",  user_relationships_path(user), method: :post, class: "btn btn-success" %>
       <% end %>
-         <% unless user.id == current_user.id %>
-           <% if (current_user.following?(user)) && (user.following?(current_user)) %>
-
-               <%= link_to 'chatを始める', room_path(user.id)%>
-
-           <% end %>
-         <% end %>
     </td>
   </tr>
+         <% unless user.id == current_user.id %>
+           <% if (current_user.following?(user)) && (user.following?(current_user)) %>
+               <tr><td><%= link_to 'chatを始める', message_path(user.id), class: "btn btn-primary" %></td></tr>
+           <% end %>
+         <% end %>
+
+
 </table>
 
 <div class='row'>
